...
    <string name="adesso_riders_club">adesso Rider\'s\nClub</string>

    <string name="welcome">Welcome</string>
    <string name="login_explore_continue">Let\’s login for explore continues</string>
    <string name="adesso_rider_club">adesso Rider\'s Club</string>
    <string name="email_phone">Email or Phone Number</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="keep_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="you_can_connect">You can connect with</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="enter_valid_email">Enter a Valid Email</string>
    <string name="enter_valid_password">Enter a Valid Password</string>
    <string name="empty_string"> </string>
    <string name="login_success_ful">Yey! Login Successful</string>
    <string name="login_success_msg">You will be moved to home screen right now.Enjoy the features!</string>
    <string name="lets_explore">Lets Explore</string>
    <string name="user_not_found">User not found</string>
...
    <string name="driving_license_number">Driving License Number</string>
    <string name="full_name">Full Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="full_name_cannot_be_empty">Full name cannot be empty</string>
    <string name="question_cannot_be_empty">Question cannot be empty</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="email">Email</string>
    <string name="enter_email_placeholder">Enter Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number_error">Phone number cannot be empty</string>
    <string name="hello">Hello</string>
    <string name="ask_question">Ask question</string>
...
    <string name="details">Details</string>
    <string name="review">Review</string>
    <string name="review_ride">Review Your Ride</string>
    <string name="check_responses">Check Responses</string>
    <string name="notifications">Notifications</string>
    <string name="send_reset_code">Send Reset Link</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="sent_reset_instruction">We’ll send you reset instructions</string>
    <string name="check_email">Check Your Email</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_code">Enter code</string>
    <string name="verify_code">Verify code</string>
    <string name="new_password">New Password</string>
...
